Fixed Overlapping Place Details

--- a/src/pages/PlaceDetails/PlaceDetails.module.scss
+++ b/src/pages/PlaceDetails/PlaceDetails.module.scss
@@ -16,22 +16,41 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  overflow: auto;
   position: relative;
 }
 
-.grid {
-  width: 100%;
-  height: auto;
+.wrapper {
   position: absolute;
+  overflow: auto;
+  inset: 0;
+}
+
+.grid {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
   top: 0;
 
   img {
     width: 100%;
-    height: auto;
+    height: 60%;
     object-fit: cover;
     border-radius: 1em 1em 0 0;
   }
+}
+
+.progress_bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: block;
+  background-color: red;
+  height: 2px;
+  z-index: 200;
+  transform: scaleX(0.4);
+  transform-origin: left;
 }
 
 .actions {
@@ -71,10 +90,12 @@
 }
 
 .text {
+  margin-top: 30em;
   flex: 1;
   padding: 1em 2em;
   border-radius: 1em 1em 0 0;
-  margin-top: 60%;
+  position: absolute;
+  top: 0%;
   align-self: stretch;
 
   border: 2px solid rgba(255, 255, 255, 0.25);
